force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Revenue</label>
    <nameField>
        <displayFormat>Revenue-{000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>