force-app/main/default/objects/Invoice__c/fields/Adder_Type__c.field-meta.xml
<CustomField>
    <fullName>Adder_Type__c</fullName>
    <formula>IF(ISBLANK( Unit_of_measure__c ), &apos;$&apos; , &apos;$/&apos;  &amp;  Unit_of_measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adder Type</label>
    <type>Text</type>
</CustomField>