force-app/main/default/objects/Invoice__c/fields/Anual_Usage_Volume__c.field-meta.xml
<CustomField>
    <fullName>Anual_Usage_Volume__c</fullName>
    <formula>Contract_Usage_Volume__c / ( Contract_Term__c /12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Usage Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>