force-app/main/default/objects/Invoice__c/fields/CaseIssue__c.field-meta.xml
<CustomField>
    <fullName>CaseIssue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Issue</label>
    <referenceTo>CaseIssue__c</referenceTo>
    <relationshipLabel>Revenue</relationshipLabel>
    <relationshipName>Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>