force-app/main/default/objects/Invoice__c/fields/Commission_Usage_Volume__c.field-meta.xml
<CustomField>
    <fullName>Commission_Usage_Volume__c</fullName>
    <formula>Anual_Usage_Volume__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Usage Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>