force-app/main/default/objects/Invoice__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <label>Commodity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>