force-app/main/default/objects/Invoice__c/fields/Difference_Adder__c.field-meta.xml
<CustomField>
    <fullName>Difference_Adder__c</fullName>
    <formula>((Received_Adder__c  - Expected_Adder__c )/Expected_Adder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Difference Adder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>