force-app/main/default/objects/Invoice__c/fields/Difference_Amount__c.field-meta.xml
<CustomField>
    <fullName>Difference_Amount__c</fullName>
    <formula>IF(TEXT(Flag__c) &lt;&gt; &apos;Payment Not Received&apos;, ( ( Received_Amount__c -  Amount__c ) / Amount__c  ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Difference Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>