force-app/main/default/objects/Invoice__c/fields/Difference_Volume__c.field-meta.xml
<CustomField>
    <fullName>Difference_Volume__c</fullName>
    <formula>( ( Received_Volume__c -  Expected_Volume__c ) / Expected_Volume__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Difference Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>