force-app/main/default/objects/Invoice__c/fields/Dispute_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolution_Date__c</fullName>
    <label>Dispute Resolution Date</label>
    <type>Date</type>
</CustomField>