force-app/main/default/objects/Invoice__c/fields/Dispute_Resolved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolved_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dispute Resolved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>