force-app/main/default/objects/Invoice__c/fields/Dispute_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Status__c</fullName>
    <label>Dispute Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
                <default>true</default>
                <label>Ok</label>
            </value>
            <value>
                <fullName>In Dispute</fullName>
            </value>
            <value>
                <fullName>Dispute Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>