force-app/main/default/objects/Invoice__c/fields/Expected_Adder__c.field-meta.xml
<CustomField>
    <fullName>Expected_Adder__c</fullName>
    <label>Expected Adder</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>