force-app/main/default/objects/Invoice__c/fields/Expected_Volume__c.field-meta.xml
<CustomField>
    <fullName>Expected_Volume__c</fullName>
    <label>Expected Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>