force-app/main/default/objects/Invoice__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Not Received</fullName>
                <default>true</default>
                <label>Payment Not Received</label>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Volume less than expected</fullName>
            </value>
            <value>
                <fullName>Volume higher than expected</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>Revenue is greater than expected</fullName>
            </value>
            <value>
                <fullName>Revenue is less than expected</fullName>
            </value>
            <value>
                <fullName>Fee is greater than expected</fullName>
            </value>
            <value>
                <fullName>Fee is less than expected</fullName>
            </value>
            <value>
                <fullName>Site Drop not approved</fullName>
            </value>
            <value>
                <fullName>Adder less than expected</fullName>
                <isActive>false</isActive>
                <label>Adder less than expected</label>
            </value>
            <value>
                <fullName>Adder more than expected</fullName>
                <isActive>false</isActive>
                <label>Adder more than expected</label>
            </value>
            <value>
                <fullName>Amount greater than expected</fullName>
                <isActive>false</isActive>
                <label>Amount greater than expected</label>
            </value>
            <value>
                <fullName>Amount less than expected</fullName>
                <isActive>false</isActive>
                <label>Amount less than expected</label>
            </value>
            <value>
                <fullName>Canceled not approved</fullName>
                <isActive>false</isActive>
                <label>Canceled not approved</label>
            </value>
            <value>
                <fullName>Missing Site</fullName>
                <isActive>false</isActive>
                <label>Missing Site</label>
            </value>
            <value>
                <fullName>Payment Greater Than Exp. Amount Exceed Error Margin</fullName>
                <isActive>false</isActive>
                <label>Payment Greater Than Exp. Amount Exceed Error Margin</label>
            </value>
            <value>
                <fullName>Payment Greater Than Exp. Amount Within Error Margin</fullName>
                <isActive>false</isActive>
                <label>Payment Greater Than Exp. Amount Within Error Margin</label>
            </value>
            <value>
                <fullName>Payment Less Than Exp. Amount Exceed Error Margin</fullName>
                <isActive>false</isActive>
                <label>Payment Less Than Exp. Amount Exceed Error Margin</label>
            </value>
            <value>
                <fullName>Payment Less Than Exp. Amount Within Error Margin</fullName>
                <isActive>false</isActive>
                <label>Payment Less Than Exp. Amount Within Error Margin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>