force-app/main/default/objects/Invoice__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Cancelled</fullName>
            </value>
            <value>
                <fullName>Site Cancelled</fullName>
            </value>
            <value>
                <fullName>Withheld - Delinquent</fullName>
            </value>
            <value>
                <fullName>Cancelled in Billing System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>