force-app/main/default/objects/Invoice__c/fields/Payment_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Month__c</fullName>
    <formula>DATE(
YEAR( Start_Date__c  ) , 
Month( Start_Date__c ) , 
CASE( MONTH(Start_Date__c), 
		1, 31, 
		2, IF( MOD( YEAR(Start_Date__c), 4) = 0, 29, 28), 
		3, 31, 
		4, 30, 
		5, 31, 
		6, 30, 
		7, 31, 
		8, 31, 
		9, 30, 
		10, 31, 
		11, 30, 
		12, 31,
                0
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>