force-app/main/default/objects/Invoice__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used for checking invoice at least paid once or not.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>