force-app/main/default/objects/Invoice__c/fields/Received_Adder__c.field-meta.xml
<CustomField>
    <fullName>Received_Adder__c</fullName>
    <label>Received Adder</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>