force-app/main/default/objects/Invoice__c/fields/Received_Volume__c.field-meta.xml
<CustomField>
    <fullName>Received_Volume__c</fullName>
    <label>Received Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>