force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
                <default>true</default>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>REJECTED-FINAL</fullName>
            </value>
            <value>
                <fullName>MOVEDTOBILL</fullName>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
            </value>
            <value>
                <fullName>Canceled not approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>