force-app/main/default/objects/Invoice__c/fields/Unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_measure__c</fullName>
    <formula>IF( Commodity__c == &apos;Gas&apos; , &apos;GJ&apos;,  IF(Commodity__c == &apos;Electricity&apos;,&apos;KWH&apos;, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of measure</label>
    <type>Text</type>
</CustomField>